View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023726 | Open CASCADE | OCCT:Foundation Classes | public | 2013-01-26 22:52 | 2013-04-29 15:22 |
Reporter | kgv | Assigned To | kgv | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023726: Wrong usage of NCollection_StdAllocator<void> in QANColStdAllocator2 | ||||
Description | Current code produces compilation error within g++ 4.7.2 | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
child of | 0023569 | closed | Roman Lygin | Community | Adding NCollection_StdAllocator |
|
Patch is ready for review in CR23726 branch |
|
No remarks, please test |
|
Dear BugMaster, Branch CR23726 was rebased on the current master. Branch CR23726 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Number of compiler warnings: occt component : Linux: 3 (3 on master) Windows: 57 (57 on master) products component : Linux: 9 (9 on master) Windows: 50 (50 on master) Regressions: No regressions Improvements: No improvements Testing cases: Not needed Testing on Linux: Total MEMORY difference: 234700144 / 234095004 Total CPU difference: 8994.480000000454 / 9839.340000000415 Testing on Windows: Total MEMORY difference: 331348228 / 330824112 Total CPU difference: 12399.0 / 12467.1875 There are not serious differences in images found by testdiff. |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-01-26 22:52 | kgv | New Issue | |
2013-01-26 22:52 | kgv | Assigned To | => kgv |
2013-01-26 22:52 | kgv | Status | new => assigned |
2013-01-26 22:55 | kgv | Relationship added | child of 0023569 |
2013-01-26 22:55 | kgv | Note Added: 0023165 | |
2013-01-26 22:55 | kgv | Assigned To | kgv => abv |
2013-01-26 22:55 | kgv | Status | assigned => resolved |
2013-01-29 09:53 | abv | Note Added: 0023193 | |
2013-01-29 09:53 | abv | Assigned To | abv => bugmaster |
2013-01-29 09:53 | abv | Status | resolved => reviewed |
2013-01-29 14:57 |
|
Assigned To | bugmaster => mkv |
2013-01-30 16:45 |
|
Note Added: 0023210 | |
2013-01-30 16:45 |
|
Test case number | => Not needed |
2013-01-30 16:45 |
|
Assigned To | mkv => bugmaster |
2013-01-30 16:45 |
|
Status | reviewed => tested |
2013-02-04 14:47 | kgv | Changeset attached | => occt master 16347bb8 |
2013-02-04 14:47 | kgv | Assigned To | bugmaster => kgv |
2013-02-04 14:47 | kgv | Status | tested => verified |
2013-02-04 14:47 | kgv | Resolution | open => fixed |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:22 |
|
Fixed in Version | => 6.6.0 |