0023726: Wrong usage of NCollection_StdAllocator<void> in QANColStdAllocator2

Fixed compilation error within g++ 4.7.2